# OpenGL

./: CMakeLists.txt  make.bat
headers/: Camera.h  Definitions.h  Drawable.h  InstancedMesh.h  InstancedModel.h  Light.h  Log.h  Material.h  Mesh.h  Model.h  ModelLoader.h  Renderer.h  Scene.h  Shader.h  Texture.h  TextureHandler.h  Transform.h  Utils.h  Volumetric.h
include/assimp/: StreamWriter.h
include/glad/: glad.h
libs/Assimp/include/assimp/: StreamReader.h
libs/Assimp/scripts/BlenderImporter/: genblenddna.py
libs/Assimp/scripts/StepImporter/: CppGenerator.py
src/: Camera.cpp  InstancedMesh.cpp  InstancedModel.cpp  Light.cpp  Log.cpp  Material.cpp  Mesh.cpp  Model.cpp  ModelLoader.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  Texture.cpp  TextureHandler.cpp  Transform.cpp  Volumetric.cpp  glad.c  main.cpp
